# cv-camera

./: .gitignore
camera-service/: compile_proto.py  pyproject.toml
camera-service/camera_service/: __init__.py  cam_capture.py  constants.py  generate_code.py
camera-service/camera_service/helpers/: poetry_install.py
camera-service/camera_service/modules/: modules_list.py  modules_processing.py
camera-service/cv_smart_house_camera/: __init__.py  cam_capture.py  constants.py  generate_code.py  main.py  server.py
camera-service/proto_services/: camera_service_pb2.py  camera_service_twirp.py
client-api/: compile_proto.py  pyproject.toml
client-api/api/: __init__.py  constants.py  test.py
client-api/api/functions/get_modules/: get_all_packages.py  get_module_description.py  get_modules.py  get_package_info.py
client-api/api/functions/get_network_devices/: get_network_devices.py  is_camera_alive.py  scan_network.py
client-api/api/functions/install_modules/: install_modules.py
client-api/api/utils/: maybe_cached.py
client-api/proto_services/: camera_service_pb2.py  camera_service_pb2_grpc.py  camera_service_twirp.py
client-browser/: index.html  package.json  pnpm-lock.yaml  tables.html
client-browser/protobuf/: camera-service.client.ts  camera-service.ts  camera_service.client.ts  camera_service.ts
client-browser/scripts/: find-devices.ts
client-browser/src/: App.tsx  proto-client copy.ts  proto-client.ts
client-browser/src/api/: get-module.ts  (+2 more)
protobuf/: camera-service.proto  camera_service.proto  cv-smart-house-service.proto  generate.txt
(+19 files in other folders)
